增加API管理页面
